--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.10.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -14,27 +14,33 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   provider: ^6.0.0
-  font_awesome_flutter: ^8.8.1
+  flutter_signin_button: ^2.0.0
   flutter_icons: ^1.1.0
-  percent_indicator: ^3.0.1
-  animated_button: ^0.2.0
-  curved_navigation_bar: ^0.3.7
-  flutter_image_compress: ^1.0.0
-  http: ^0.13.4
-  intl: ^0.17.0
-  platform_device_id: ^0.1.3
-  flutter_native_image: ^0.0.6
-  progress_dialog: ^1.2.2
-  fluttertoast: ^8.0.8
-  flutter_secure_storage: ^4.0.0
-  firebase_messaging: ^6.0.10
-  shared_preferences: ^0.5.7+3
-  flutter_local_notifications: ^1.4.4+1
-  sqflite: ^2.0.0+3
-  image_picker: ^0.7.5+3
-  flutter_launcher_icons: ^0.8.0
-  flutter_web_browser: ^0.15.0
-  flutter_animation_progress_bar: ^2.0.1
+  scrollable_positioned_list: ^0.2.2
+  font_awesome_flutter: ^9.2.0
+  curved_navigation_bar: ^1.0.1
+  #google_maps_flutter: ^2.0.0
+  #font_awesome_flutter: ^8.8.1
+  #flutter_icons: ^1.1.0
+  #percent_indicator: ^3.0.1
+  #animated_button: ^0.2.0
+  #curved_navigation_bar: ^0.3.7
+  #flutter_image_compress: ^1.0.0
+  #http: ^0.13.4
+  #intl: ^0.17.0
+  #platform_device_id: ^0.1.3
+  #flutter_native_image: ^0.0.6
+  #progress_dialog: ^1.2.2
+  #fluttertoast: ^8.0.8
+  #flutter_secure_storage: ^4.0.0
+  #firebase_messaging: ^9.0.0
+  #shared_preferences: ^0.5.7+3
+  #flutter_local_notifications: ^1.4.4+1
+  #sqflite: ^2.0.0+3
+  #image_picker: ^0.7.5+3
+  #flutter_launcher_icons: ^0.8.0
+  #flutter_web_browser: ^0.15.0
+  #flutter_animation_progress_bar: ^2.0.1
 
 dev_dependencies:
   flutter_test:
@@ -45,4 +51,22 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+
+  fonts:
+    - family: gothic
+      fonts:
+        - asset: assets/font_styles/century_gothic.ttf
+    - family: montserrat_regular
+      fonts:
+        - asset: assets/font_styles/montserrat_regular.ttf
+          #weight: 600
+    - family: montserrat_bold
+      fonts:
+        - asset: assets/font_styles/montserrat_bold.ttf
+          #weight: 600
+
+  assets:
+    - assets/images/
+
+
 
