--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   font_awesome_flutter: ^9.2.0
   curved_navigation_bar: ^1.0.1
   percent_indicator: ^3.4.0
+  google_maps_flutter: ^2.0.0
   #google_maps_flutter: ^2.0.0
   #font_awesome_flutter: ^8.8.1
   #flutter_icons: ^1.1.0
