--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   curved_navigation_bar: ^1.0.1
   percent_indicator: ^3.4.0
   google_maps_flutter: ^2.0.0
+  #geolocator: ^7.0.0
+  location: ^4.2.0
+
   #google_maps_flutter: ^2.0.0
   #font_awesome_flutter: ^8.8.1
   #flutter_icons: ^1.1.0
