--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   google_maps_flutter: ^2.0.0
   #geolocator: ^7.0.0
   location: ^4.2.0
+  flutter_svg: ^0.21.0
 
   #google_maps_flutter: ^2.0.0
   #font_awesome_flutter: ^8.8.1
