--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   #animated_button: ^0.2.0
   #curved_navigation_bar: ^0.3.7
   #flutter_image_compress: ^1.0.0
-  #http: ^0.13.4
+  http: ^0.13.4
+  shared_preferences: ^2.0.8
   #intl: ^0.17.0
   #platform_device_id: ^0.1.3
   #flutter_native_image: ^0.0.6
